@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qSharp 2.1.1 [TBA]
+------------------------------------------------------------------------------
+
+  - Fix: sanity check against protocol version for guids
+
+------------------------------------------------------------------------------
   qSharp 2.1.0 [2014.10.01]
 ------------------------------------------------------------------------------
 
